Ingress/first-second-springboot-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: microservices-ingress
    #annotations:
    #nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: dev-microservices.info
    http:
      paths:
      - path: /
        backend:
            serviceName: first-springboot-microservice
            servicePort: 8080
      - path: /secondapi
        backend:
            serviceName: second-springboot-microservice
            servicePort: 8081
