Ingress/first-springboot-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: dev-microservices.info
    http:
      paths:
      - path: /firstapi
        backend:
          serviceName: first-springboot-microservice
          servicePort: 8080
